# iiwaFRI_Transformation

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  KUKA_FRI.doxyfile  README.md
.devcontainer/: devcontainer.json
.docker/: Dockerfile  Dockerfile.BaseImage  Dockerfile.mastersApp  Dockerfile.mastersAppDev  Dockerfile.mastersAppRun  Dockerfile.rl  Dockerfile.roblib  DockerfileBaseImage  Dockerfile_mastersApp  Dockerfile_rl  Dockerfile_test  builddocker.sh  docker-compose.yml  startdocker.sh
.run/: All in mastersTests.run.xml  Base Image.run.xml  RobLib App.run.xml
FRIdoc/html/: _f_r_i_messages_8pb_8c.html  _f_r_i_messages_8pb_8c.js  _f_r_i_messages_8pb_8c__incl.map  _f_r_i_messages_8pb_8c__incl.md5  _f_r_i_messages_8pb_8h.html  _f_r_i_messages_8pb_8h.js  _f_r_i_messages_8pb_8h__dep__incl.map  _f_r_i_messages_8pb_8h__dep__incl.md5  _f_r_i_messages_8pb_8h__incl.map  _f_r_i_messages_8pb_8h__incl.md5  _f_r_i_messages_8pb_8h_source.html  _i_o_access_app_8cpp.html  _i_o_access_app_8cpp.js  _i_o_access_app_8cpp__incl.map  _i_o_access_app_8cpp__incl.md5  _i_o_access_client_8cpp.html  (+1189 more)
masters/: CMakeLists.txt  exa_iiwa_dh_model.xml  iiwa_dh_model.xml  iiwa_my.xml  masters.cpp  mastersApp.cpp  mastersclient.cpp  plotMaster.cpp  robotModel.cpp
masters/descr/output/: robot.dot
masters/doc/: Doxyfile.in
masters/doc/html/: annotated.html  annotated_dup.js  classes.html  classmastersclient-members.html  classmastersclient.html  classmastersclient.js  classmastersclient__coll__graph.map  classmastersclient__coll__graph.md5  classmastersclient__inherit__graph.map  classmastersclient__inherit__graph.md5  classmastersclient_a171d575864d9fa65755b2e4ce2cb0513_cgraph.map  classmastersclient_a171d575864d9fa65755b2e4ce2cb0513_cgraph.md5  classmastersclient_a171d575864d9fa65755b2e4ce2cb0513_icgraph.map  classmastersclient_a171d575864d9fa65755b2e4ce2cb0513_icgraph.md5  classmastersclient_a357664506b2c550cf7edaed6a8fd31a2_icgraph.map  classmastersclient_a357664506b2c550cf7edaed6a8fd31a2_icgraph.md5  classmastersclient_a45555dfe6add1c3995667b14541c9139_icgraph.map  classmastersclient_a45555dfe6add1c3995667b14541c9139_icgraph.md5  classmastersclient_a4868c3c6b7959803d944e780bbff5ee4_cgraph.map  classmastersclient_a4868c3c6b7959803d944e780bbff5ee4_cgraph.md5  classmastersclient_a52c4a444e2e7d8485dc5dfc711f49cb1_cgraph.map  classmastersclient_a52c4a444e2e7d8485dc5dfc711f49cb1_cgraph.md5  classmastersclient_a52c4a444e2e7d8485dc5dfc711f49cb1_icgraph.map  classmastersclient_a52c4a444e2e7d8485dc5dfc711f49cb1_icgraph.md5  classmastersclient_a67ce0ffe6f714613edecda218bb84055_cgraph.map  classmastersclient_a67ce0ffe6f714613edecda218bb84055_cgraph.md5  classmastersclient_a67ce0ffe6f714613edecda218bb84055_icgraph.map  classmastersclient_a67ce0ffe6f714613edecda218bb84055_icgraph.md5  classmastersclient_ae7b3d3622c123c82f1587adee3a1237b_cgraph.map  classmastersclient_ae7b3d3622c123c82f1587adee3a1237b_cgraph.md5  classmastersclient_af38ef9a717f7cec043278ce59ed51c9d_icgraph.map  classmastersclient_af38ef9a717f7cec043278ce59ed51c9d_icgraph.md5  classmatplotlibcpp_1_1_plot-members.html  classmatplotlibcpp_1_1_plot.html  classmatplotlibcpp_1_1_plot.js  classmatplotlibcpp_1_1_plot_a6ab809f4fc44d6e4eadb100cba5b519e_cgraph.map  classmatplotlibcpp_1_1_plot_a6ab809f4fc44d6e4eadb100cba5b519e_cgraph.md5  classmatplotlibcpp_1_1_plot_ac515760537365754e3437322e87cfc79_cgraph.md5  classplot_master-members.html  classplot_master.html  (+384 more)
masters/doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  defines_0.js  (+56 more)
masters/doc/latex/: annotated.tex  classmastersclient.tex  classmastersclient__coll__graph.md5  classmastersclient__inherit__graph.md5  classmastersclient_a171d575864d9fa65755b2e4ce2cb0513_cgraph.md5  classmastersclient_a171d575864d9fa65755b2e4ce2cb0513_icgraph.md5  classmastersclient_a357664506b2c550cf7edaed6a8fd31a2_icgraph.md5  classmastersclient_a45555dfe6add1c3995667b14541c9139_icgraph.md5  classmastersclient_a4868c3c6b7959803d944e780bbff5ee4_cgraph.md5  classmastersclient_a52c4a444e2e7d8485dc5dfc711f49cb1_cgraph.md5  classmastersclient_a52c4a444e2e7d8485dc5dfc711f49cb1_icgraph.md5  classmastersclient_a67ce0ffe6f714613edecda218bb84055_cgraph.md5  classmastersclient_a67ce0ffe6f714613edecda218bb84055_icgraph.md5  classmastersclient_ae7b3d3622c123c82f1587adee3a1237b_cgraph.md5  classmastersclient_af38ef9a717f7cec043278ce59ed51c9d_icgraph.md5  classmatplotlibcpp_1_1_plot.tex  classmatplotlibcpp_1_1_plot_a6ab809f4fc44d6e4eadb100cba5b519e_cgraph.md5  classmatplotlibcpp_1_1_plot_ac515760537365754e3437322e87cfc79_cgraph.md5  classplot_master.tex  classplot_master_a31c67a01be59bdb9ebf3bf86bf93bf32_cgraph.md5  classplot_master_a31c67a01be59bdb9ebf3bf86bf93bf32_icgraph.md5  classplot_master_a8f82bb73ecf8b47ef9fdb53b50fded08_icgraph.md5  classplot_master_ac81e23afe9bc69d1731d8688f56c54cc_icgraph.md5  classplot_master_ad2f26d2c1dcc762f9e6dbe596da22e2d_icgraph.md5  classrobot_model.tex  classrobot_model__coll__graph.md5  classrobot_model_a08fc87648e1634ba61fcff546da0880a_icgraph.md5  classrobot_model_a15a9830147ca85b11bad1f024c7ba36e_icgraph.md5  classrobot_model_a1a92e57456ef8f44e8ac04e747641133_icgraph.md5  classrobot_model_a6d79eb6c55649f2a88517e4a9e960278_icgraph.md5  classrobot_model_a8741821f3b9995b0bd2647e643d4afe2_icgraph.md5  dir_59425e443f801f1f2fd8bbe4959a3ccf.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  hierarchy.tex  lbr__struct_8h.tex  lbr__struct_8h__dep__incl.md5  lbr__struct_8h__incl.md5  masters_app_8cpp.tex  masters_app_8cpp__incl.md5  (+134 more)
masters/include/: lbr_struct.h  mastersclient.h  matplotlibcpp.h  plotMaster.h  robotModel.h
masters/tests/: CMakeLists.txt  myfirsttest.cpp
(+618 files in other folders)
